minor fixes and ordering

--- a/src/main/resources/properties/ui-strings.properties
+++ b/src/main/resources/properties/ui-strings.properties
@@ -1,14 +1,15 @@
+panel.connectionmanagerroot.back=Back
 panel.connectionsettings.clear=Clear
 panel.connectionsettings.connect=Connect
-panel.connectionsettings.url=URL:
 panel.connectionsettings.database=Database:
 panel.connectionsettings.host=Host:
-panel.connectionsettings.port=Port:
-panel.connectionsettings.username=Username:
 panel.connectionsettings.password=Password:
-panel.connectionsettings.type=Type:
-panel.connectionsettings.vendor=Vendor:
+panel.connectionsettings.port=Port:
 panel.connectionsettings.status=Status
+panel.connectionsettings.type=Type:
+panel.connectionsettings.url=URL:
+panel.connectionsettings.username=Username:
+panel.connectionsettings.vendor=Vendor:
 panel.root.connection.manager=Connection Manager
-tabbedpane.manager.stored.connections=Stored Connections
 tabbedpane.manager.open.connections=Open Connections
+tabbedpane.manager.stored.connections=Stored Connections
