Swap host label for path when using sqllite databases

--- a/src/main/resources/properties/ui-strings.properties
+++ b/src/main/resources/properties/ui-strings.properties
@@ -4,6 +4,7 @@ panel.connectionsettings.connect=Connect
 panel.connectionsettings.database=Database:
 panel.connectionsettings.host=Host:
 panel.connectionsettings.password=Password:
+panel.connectionsettings.path=Path:
 panel.connectionsettings.port=Port:
 panel.connectionsettings.status=Status
 panel.connectionsettings.type=Type:
