--- a/src/main/resources/properties/ui-strings.properties
+++ b/src/main/resources/properties/ui-strings.properties
@@ -14,3 +14,5 @@ panel.connectionsettings.vendor=Vendor:
 panel.root.connection.manager=Connection Manager
 tabbedpane.manager.open.connections=Open Connections
 tabbedpane.manager.stored.connections=Stored Connections
+connection.type.jndi=JNDI
+connection.type.dbcp=DBCP
